all spacing problem solved

--- a/responsive.css
+++ b/responsive.css
@@ -237,8 +237,8 @@
       flex-direction: column;
     }
 
-    .container {
-      padding: 0 16px;
+    .dril-seciton-2 {
+      width: 100%;
     }
 }
 
